<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonParamOplata"
        android:layout_width="396dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#A6A0A0"
        android:gravity="left|center_vertical"
        android:text="@string/oplata"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <Button
        android:id="@+id/buttonParamNotification"
        android:layout_width="396dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#A6A0A0"
        android:gravity="left|center_vertical"
        android:text="@string/notification"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <Button
        android:id="@+id/buttonParamPassword"
        android:layout_width="396dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#A6A0A0"
        android:gravity="left|center_vertical"
        android:text="@string/passwords"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <Button
        android:id="@+id/buttonParamLanguage"
        android:layout_width="396dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#A6A0A0"
        android:gravity="left|center_vertical"
        android:text="@string/language"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />
</androidx.constraintlayout.widget.ConstraintLayout>